--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   },
   "homepage": "https://github.com/olegTheCoder/redmarker#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "hbs": "^4.2.0",
+    "http-errors": "^1.8.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.9.0"
+    "sequelize": "^6.9.0",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
