--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/olegTheCoder/redmarker#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -32,9 +33,12 @@
     "session-file-store": "^1.5.0"
   },
   "devDependencies": {
+    "cheerio": "^1.0.0-rc.10",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "sequelize-cli": "^6.3.0"
   }
 }
